--- a/School Management/Login.resx
+++ b/School Management/Login.resx
@@ -1622,4 +1622,7 @@
         1j6mb+dcO/faOdjOxXZOtnOznaNPjfZe/dvEHiEVbbHF/wexP9SGfYG+TwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="errorProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
